# feedforest

./: .$UML_Feedforest.drawio.bkp  .gitignore  README.md  index.html  package.json  tsconfig.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json  test.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  rssread.rs
src/lib/: FeedList.svelte  ListItem.svelte  Selecter.svelte  stores.ts
