[package]
name = "feedforest"
version = "0.0.1"
description = "Rss Reader"
authors = ["Kazuaki"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_derive = "1.0.163"
serde-pickle = "1.1.1"
serde_json = "1.0.96"
rss = "2.0.4"
chrono = "0.4.26"
reqwest = { version = "0.11.18", features = ["blocking"] }
webbrowser = "0.8.10"
dirs="5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
