[package]
name = "feedforest"
version = "0.0.1"
description = "Rss Reader"
authors = ["Kazuaki"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1.4.1", features = ["shell-open"] }
serde = { version ="1.0.188", features = ["derive"] }
serde_derive ="1.0.188"
serde_json = "1.0.105"
rss = "2.0.6"
chrono = "0.4.28"
reqwest = { version = "0.11.20", features = ["blocking"] }
webbrowser = "0.8.11"
dirs="5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
