[package]
name = "feedforest"
version = "0.0.1"
description = "Rss Reader"
authors = ["Kazuaki"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.8", features = ["shell-open"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
serde_json = "1.0.117"
rss = "2.0.8"
chrono = "0.4.38"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
webbrowser = "1.0.1"
dirs = "5.0.1"
bytes = "1.6.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
